# aof

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  README.md  RELEASE_PROCESS.md  ROADMAP.md  test-docker-health.yaml  test-output-schema.sh
.github/workflows/: release.yml
.hive-memory/: architecture-lego-blocks.json  implementation-status.json  session-2025-12-18-roadmap.json
agents/: devops-agent.yaml  github-pr-reviewer.yaml  k8s-ops.yaml
aof/: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yaml
aof/agents/: devops-agent.yaml  sre-agent.yaml
aof/config/: daemon.yaml
aof/docs/: CLI_REFERENCE.md
aof/examples/: daemon-config.yaml  hello-agent.yaml  k8s-agent.yaml  k8s-helper.yaml  kubectl-agent.yaml  test-mcp-servers.yaml
config/: github-automation.yaml  github-triggers.yaml
config/aof/: daemon.yaml
configs/: telegram-test.yaml
crates/aof-core/: Cargo.toml
crates/aof-core/src/: activity.rs  agent.rs  agentflow.rs  binding.rs  context.rs  error.rs  fleet.rs  lib.rs  registry.rs  schema.rs  trigger.rs  workflow.rs
crates/aof-core/src/tool/: structured_output.rs
crates/aof-llm/: Cargo.toml
crates/aof-mcp/: Cargo.toml
crates/aof-memory/: Cargo.toml
crates/aof-runtime/: Cargo.toml
crates/aof-tools/: Cargo.toml
crates/aof-tools/src/: lib.rs  registry.rs
crates/aof-tools/src/benchmark/: mod.rs  runner.rs
crates/aof-tools/src/tools/: argocd.rs  aws.rs  azure.rs  cli.rs  datadog.rs  docker.rs  flux.rs  gcp.rs  github_actions.rs  gitlab_ci.rs  grafana.rs  mod.rs  newrelic.rs  observability.rs  opa.rs  servicenow.rs  shell.rs  snyk.rs  sonarqube.rs  splunk.rs  terraform.rs  trivy.rs  vault.rs
crates/aof-triggers/: Cargo.toml
crates/aof-triggers/src/: lib.rs
crates/aof-triggers/src/command/: mod.rs
crates/aof-triggers/src/flow/: binding_router.rs  mod.rs  registry.rs  router.rs
crates/aof-triggers/src/handler/: mod.rs
crates/aof-triggers/src/safety/: classifier.rs  context.rs  mod.rs  policy.rs
crates/aof-triggers/src/server/: mod.rs
crates/aof-triggers/tests/: git_platforms_test.rs  jira_platform_test.rs  platform_slack.rs  workflow_tests.rs
crates/aof-viz/: Cargo.toml
crates/aof-viz/src/: flow.rs  lib.rs  progress.rs  safety.rs  status.rs  tools.rs
crates/aofctl/: Cargo.toml
crates/aofctl/src/: cli.rs  main.rs  output.rs  resources.rs  session.rs
crates/aofctl/src/commands/: completion.rs  describe.rs  fleet.rs  flow.rs  get.rs  mod.rs  run.rs  serve.rs
crates/aofctl/src/output/: structured_renderer.rs
crates/test-trigger-server/: Cargo.toml
docs/: DOCUMENTATION_INDEX.md  README.md  USER_README.md  concepts.md  getting-started.md  intro.md  newrelic-api-research.md
docs/agent-library/: cicd.md  cloud.md  incident.md  index.md  itsm.md  kubernetes.md  observability.md  security.md
docs/agentflow/: README.md
docs/architecture/: ADR-001-kubectl-cli-structure.md  composable-design.md  context-injection.md  index.md  multi-model-consensus.md  multi-tenant-agentflows.md
docs/cloud/: aws.md  azure.md  examples.md  gcp.md  overview.md  tutorials.md
docs/concepts/: discord-integration.md  fleets.md  github-integration.md  jira-integration.md  resource-selection.md  teams-integration.md  whatsapp-integration.md
docs/dev/: AGENTFLOW_DESIGN.md  ARCHITECTURE.md  CONTRIBUTING.md  TOOLS_DEVELOPMENT.md
docs/developer/: BUILDING_TRIGGERS.md
docs/examples/: daily-report-flow.yaml  github-pr-reviewer.yaml  incident-responder.yaml  index.md  kubernetes-agent.yaml  slack-bot-flow.yaml
docs/guides/: agent-switching.md  agentflow-routing.md  approval-workflow.md  builtin-commands.md  context-switching.md  conversation-memory.md  deployment.md  enterprise-setup.md  github-setup.md  migration-guide.md  quickstart-discord.md  quickstart-teams.md  quickstart-telegram.md  quickstart-whatsapp.md  safety-layer.md  slack-app-setup.md  telegram-mobile.md
docs/internal/: ARCHITECTURE_ANALYSIS_SUMMARY.md  BACKWARD-COMPATIBILITY-STRATEGY.md  CRITICAL-ANALYSIS-PER-OP-TOOLS.md  GITHUB_PR_REVIEW_DESIGN.md  GIT_PLATFORM_ABSTRACTION.md  IMPLEMENTATION_PLAN.md  INTEGRATION_API_SPEC.md  INTEGRATION_ARCHITECTURE.md  INTEGRATION_DIAGRAMS.md  INTEGRATION_INDEX.md  INTEGRATION_QUICK_REFERENCE.md  ISSUE_TRACKING_PLATFORM_ABSTRACTION.md  LANDING_PAGE_SPEC.md  ROADMAP-V1.md  STRUCTURED-OUTPUT-SUMMARY.md  TOKEN-BENCHMARK-REPORT.md  improvement-plan.md  per-operation-vs-unified-tools.md  research-servicenow-api.md  tool-output-format.md  tui-enhancement-plan.md
docs/introduction/: concepts.md  quickstart.md
docs/mcp-catalog/: aws.md  brave-search.md  datadog.md  fetch.md  filesystem.md  github.md  gitlab.md  grafana.md  index.md  kubernetes.md  postgres.md  prometheus.md  puppeteer.md  slack.md  sqlite.md
docs/reference/: agent-spec.md  agentflow-spec.md  aofctl.md  context-spec.md  daemon-config.md  discord-integration.md  fleet-spec.md  flowbinding-spec.md  github-integration.md  jira-integration.md  kubernetes-crds.md  platform-policies.md  structured-io.md  teams-integration.md  trigger-spec.md  whatsapp-integration.md
docs/research/: splunk-api-research.md
docs/resources/: binding.md  context.md  trigger.md
docs/schemas/: README.md
docs/security/: examples.md  opa.md  trivy.md  tutorials.md
docs/tools/: builtin-tools.md  cicd.md  custom-tools.md  datadog.md  grafana.md  index.md  mcp-integration.md  newrelic.md  servicenow.md  splunk.md
docs/triggers/: index.md  opsgenie.md  pagerduty.md
docs/tutorials/: INDEX.md  deep-analysis-fleet.md  discord-ops-bot.md  first-agent.md  (+13 more)
docusaurus-site/: docusaurus.config.ts  sidebars.ts
examples/: README-OLD.md  README.md  REFACTORING_SUMMARY.md  hello-agent.yaml  k8s-agent.yaml  k8s-helper.yaml  kubectl-agent.yaml  mcp-advanced-example.yaml  mcp-tools-agent.yaml  test-gemini-agent.yaml  test-gemini-with-tools.yaml  test-mcp-servers.yaml  test-tools-agent.yaml  test-unified-tools.yaml
flows/: github-pr-review.yaml  telegram-default.yaml
scripts/: flow-pr-review.sh  pr-review.sh  publish-crates.sh  test-github-webhook.sh  test-mcp-config.sh
(+300 files in other folders)
