[workspace]
resolver = "2"
members = [
    "crates/aof-core",
    "crates/aof-mcp",
    "crates/aof-llm",
    "crates/aof-runtime",
    "crates/aof-memory",
    "crates/aof-triggers",
    "crates/aof-tools",
    "crates/aof-viz",
    "crates/aofctl",
    "crates/smoke-test-mcp",
    "crates/test-trigger-server",
]

[workspace.package]
version = "0.3.2-beta"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
repository = "https://github.com/agenticdevops/aof"
authors = ["Gourav Shah <gjs@opsflow.sh>"]
keywords = ["ai", "agents", "llm", "devops", "kubernetes"]
categories = ["command-line-utilities", "development-tools"]
homepage = "https://aof.sh"
documentation = "https://docs.aof.sh"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde_path_to_error = "0.1"

# HTTP/Networking
reqwest = { version = "0.11", features = ["json", "stream"] }
hyper = { version = "1.0", features = ["full"] }
tower = "0.4"

# CLI
clap = { version = "4.4", features = ["derive", "cargo", "env"] }
clap_complete = "4.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Performance
dashmap = "5.5"
arc-swap = "1.6"
parking_lot = "0.12"

# Zero-copy
bytes = "1.5"
memmap2 = "0.9"

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Random
rand = "0.8"

# Regex
regex = "1.10"

# Internal workspace dependencies (path for local dev, version for crates.io)
aof-core = { path = "crates/aof-core", version = "0.3.2-beta" }
aof-mcp = { path = "crates/aof-mcp", version = "0.3.2-beta" }
aof-llm = { path = "crates/aof-llm", version = "0.3.2-beta" }
aof-runtime = { path = "crates/aof-runtime", version = "0.3.2-beta" }
aof-memory = { path = "crates/aof-memory", version = "0.3.2-beta" }
aof-triggers = { path = "crates/aof-triggers", version = "0.3.2-beta" }
aof-tools = { path = "crates/aof-tools", version = "0.3.2-beta" }

# File utilities
glob = "0.3"
which = "6.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
