[package]
name = "aof-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core types, traits, and abstractions for AOF framework"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
regex = "1"

[dev-dependencies.tempfile]
version = "3"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "full", "macros"] }
chrono = { workspace = true }
