[package]
name = "aof-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Modular tool implementations for AOF agents"

[features]
default = ["file", "shell", "git"]
file = []
shell = []
kubectl = []
docker = []
git = []
terraform = []
http = ["reqwest"]
observability = ["reqwest", "chrono"]
cicd = ["reqwest", "chrono"]
security = ["reqwest", "base64", "urlencoding"]
cloud = []
all = ["file", "shell", "kubectl", "docker", "git", "terraform", "http", "observability", "cicd", "security", "cloud"]

[dependencies]
aof-core = { workspace = true }
tokio = { workspace = true, features = ["process", "fs", "io-util"] }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
glob = { workspace = true }
reqwest = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
which = { workspace = true }
base64 = { version = "0.22", optional = true }
urlencoding = { version = "2.1", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "full", "macros"] }
tempfile = "3"
