[package]
name = "aof-viz"
version.workspace = true
edition.workspace = true
description = "ASCII visualization for AOF agent execution and workflows"
license.workspace = true
repository.workspace = true
keywords = ["aof", "visualization", "ascii", "terminal"]
categories = ["command-line-utilities", "visualization"]

[dependencies]
aof-core = { path = "../aof-core" }

# Terminal colors and styling
colored = "2.1"

# Unicode box drawing
unicode-width = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
pretty_assertions = "1.4"
