[package]
name = "aofctl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "CLI for AOF framework - kubectl-style agent orchestration"
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "../../README.md"

[[bin]]
name = "aofctl"
path = "src/main.rs"

[dependencies]
aof-core = { workspace = true }
aof-mcp = { workspace = true, features = ["all-transports"] }
aof-llm = { workspace = true, features = ["all-providers"] }
aof-runtime = { workspace = true }
aof-memory = { workspace = true, features = ["all-backends"] }
aof-triggers = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
serde_path_to_error = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
crossterm = "0.27"
ratatui = "0.26"
atty = "0.2"
comfy-table = "7.1"
colored = "2.1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
