[package]
name = "test-trigger-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Test trigger server for AOF workflow testing"

[[bin]]
name = "test-trigger-server"
path = "src/main.rs"

[dependencies]
aof-core.workspace = true
aof-triggers.workspace = true
aof-runtime.workspace = true

tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true

# HTTP server
axum = "0.7"
tower-http = { version = "0.5", features = ["trace"] }
